force-app/main/default/objects/Item2__c/Item2__c.object-meta.xml
<CustomObject>
    <label>Item2</label>
    <nameField>
        <label>Item2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>