force-app/main/default/objects/Item2__c/fields/f1__c.field-meta.xml
<CustomField>
    <fullName>f1__c</fullName>
    <label>f1</label>
    <length>23</length>
    <type>Text</type>
</CustomField>