force-app/main/default/objects/Item2__c/fields/f2__c.field-meta.xml
<CustomField>
    <fullName>f2__c</fullName>
    <label>f2</label>
    <length>23</length>
    <type>Text</type>
</CustomField>