force-app/main/default/objects/Item2__c/fields/f3__c.field-meta.xml
<CustomField>
    <fullName>f3__c</fullName>
    <label>f3</label>
    <length>34</length>
    <type>Text</type>
</CustomField>